--- a/CHAPTER_01_Introduction.ipynb
+++ b/CHAPTER_01_Introduction.ipynb
@@ -4,7 +4,134 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><b><u>A First Application: Classifying Iris Species</u></b></center>"
+    "## <b><u><center>Introduction to Machine Learning</center></u></b>\n",
+    "\n",
+    "<br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <br><b>What is Machine Learning ?</b> <br>\n",
+    "\n",
+    "<b>MACHINE LEARNINNG</b> is about extracting knowledge from data. <br>\n",
+    "It is a research field at the intersection of <i>statistics, artifical intelligence,</i> and <i>computer science</i> and is also known as <b>predictive analysis</b> or <b>statistical learning.</b>\n",
+    "<br><br><br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <br> <b>Why Machine Learning ?</b> <br>\n",
+    "\n",
+    "Manually crafting decision rules for some problem is feasible for some application, particularly those in which humans have a good understanding of the process to the model. <br><br>\n",
+    "\n",
+    "However, using handcoded rules to make decision have <u>two major dis-advantages:</u>\n",
+    "\n",
+    "<ul>\n",
+    "    <li>\n",
+    "    The logic required to make a decision is specific to a domain and task. Changing the task even slightly require a rewrite of the whole system.\n",
+    "    </li>\n",
+    "    <li>\n",
+    "    Designing rules require a deep understanding of how a decision should be made by a human expert.\n",
+    "    </li>\n",
+    "\n",
+    "</ul>\n",
+    "\n",
+    "<br><br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <br> <b>Problems Machine Learning Can Solve</b> <br>\n",
+    "\n",
+    "The most successful kind of machine learning algorithms are those that <i>automate decision-making processes by generalizing</i> from known examples. <br>\n",
+    "In this setting, which is known as <i>supervised learning</i>, the user provides the algorithm with a pairs of inputs and desired outputs, and the algorithm finds a way to produce the desired output given an input. <br>\n",
+    "In particular, the algorithm is able to create an output for an input it has never seen before without any help from a human. <br><br><br>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### <u>Supervised Machine Learning:</u>\n",
+    "\n",
+    "Machine learning algorithms that learn from input/output pairs are called <i>Supervised Learning Algorithm</i> because the user provides supervision to the algorithm in the form of the desired outputs for each example that they learn from.\n",
+    "\n",
+    "Examples of the supervised machine learning task include:\n",
+    "\n",
+    "<ul>\n",
+    "&emsp; &emsp; &emsp; &emsp; &emsp;  &emsp; <li> <i> Identifying the zip code from handwritten digits on an envelope. </i> </li>\n",
+    "&emsp; &emsp; &emsp; &emsp; &emsp;  &emsp; <li> <i> Determining whether a tumor is bengin based on a medical image. </i> </li>\n",
+    "&emsp; &emsp; &emsp; &emsp; &emsp;  &emsp; <li> <i> Detecting fraudulent activity in credit card transactions. </i> </li>\n",
+    "</ul>\n",
+    "<br><br><br>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### <u>Unsupervised Machine Learning:</u>\n",
+    "\n",
+    "Unsupervised algorithms are the other type of algorithm in which only the input data is known, and no known output data is given to the algorithm.\n",
+    "\n",
+    "Examples of the unsupervised machine learning include:\n",
+    "\n",
+    "<ul>\n",
+    "&emsp; &emsp; &emsp; &emsp; &emsp;  &emsp; <li> <i> Identifying topics in a set of blog posts. </i> </li>\n",
+    "&emsp; &emsp; &emsp; &emsp; &emsp;  &emsp; <li> <i> Segmenting customers into groups with similar preferences. </i> </li>\n",
+    "&emsp; &emsp; &emsp; &emsp; &emsp;  &emsp; <li> <i> Detecting abnormal access patterns to a website. </i> </li>\n",
+    "</ul>\n",
+    "<br><br><br>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "For both supervised and unsupervised learning tasks, it is important to have a representation of our input data that a computer can understand. <br>\n",
+    "\n",
+    "Often it is helpful to think of your data as a <b>table.</b> <br>\n",
+    "Each data point that you want to reason about is a <b>row,</b> and each property that describes that data point is a <b>column.</b> <br>\n",
+    "\n",
+    "Each entity or row here is known as a <b>sample (or data point)</b> in machine learning, while the columns—the properties that describe these entities—are called <b>features.</b>\n",
+    "<br><br><br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <br> <b>Why Python ?</b> <br>\n",
+    "\n",
+    "<ul>\n",
+    "    <li>\n",
+    "    Python has become the lingua franca for many data science applications. <br></li>\n",
+    "    <li>\n",
+    "    It combines the power of <u>general-purpose programming languages</u> with the ease of use of <u>domain-specific scripting languages</u> like MATLAB or R.    <br></li>\n",
+    "    <li>\n",
+    "    Python has <u>rich libraries</u> for data loading, visualization, statistics, natural language processing, image processing, and more.  <br></li>\n",
+    "    <li>\n",
+    "    This vast toolbox provides data scientists with a <u>large array of general- and special-purpose functionality.</u>    <br></li>\n",
+    "    <li>\n",
+    "    One of the main advantages of using Python is the <u>ability to interact directly with the code</u>, using a terminal or other tools like the Jupyter Notebook.\n",
+    "    </li>\n",
+    "</ul>\n",
+    "<br><br><br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center><b><u>A First Application: Classifying Iris Species</u></b></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><br>\n",
+    "As here we have measurements for which we know the correct species of iris, therefore this is a supervised learning problem. <br><br>\n",
+    "In this case, we want to predict one of several option (the species of iris: <i>setosa, versicolor, or virginica</i>). So, this is an example of a <b><u><i>classification problem.</i></u></b> <br>\n",
+    "The <u>possible outputs</u> (different species of irises) are called <b>classes.</b> <br>\n",
+    "The desired output for a single data point (an iris) is the species of this flower. For a particular data point, the species it belongs to is called its <b>label.</b>\n"
    ]
   },
   {
@@ -12,7 +139,18 @@
    "metadata": {},
    "source": [
     "<br><br><br>\n",
-    "## <b><center>Meet The Data:</center></b>"
+    "\n",
+    "## <b><center>Meet The Data:</center></b>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<pre>\n",
+    "DATA:   Iris Dataset (A typical dataset in ML and stastistic)\n",
+    "It is included in <i>scikit-learn</i> in the <i>datasets module.</i>\n",
+    "</pre>\n"
    ]
   },
   {
@@ -24,6 +162,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import mglearn\n",
+    "# Loading the iris_dataset module\n",
     "from sklearn.datasets import load_iris\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.neighbors import KNeighborsClassifier"
@@ -32,15 +171,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iris_dataset = load_iris()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,6 +184,11 @@
     }
    ],
    "source": [
+    "# The iris object that is returned by below \"load_iris\" is 'BUNCH OBJECT', which is very similar to dictionary.\n",
+    "# It contains keys and values:\n",
+    "\n",
+    "iris_dataset = load_iris()\n",
+    "\n",
     "print(\"Keys of iris_dataset: \\n\\n{}\".format(iris_dataset.keys()))"
    ]
   },
@@ -81,6 +216,8 @@
     }
    ],
    "source": [
+    "# The value of the key \"DESCR\" is a short description of the dataset.\n",
+    "\n",
     "print(iris_dataset['DESCR'][:193] + \"\\n\\n.....\")"
    ]
   },
@@ -98,6 +235,8 @@
     }
    ],
    "source": [
+    "# The value of the key \"target_names\" is an array of strings, containing the species of the flower that we want to predict:\n",
+    "\n",
     "print(\"Target names: {}\".format(iris_dataset['target_names']))"
    ]
   },
@@ -117,6 +256,8 @@
     }
    ],
    "source": [
+    "# The value of \"feature_names\" is an list of strings, giving the discription of each features:\n",
+    "\n",
     "print(\"Feature names: \\n\\n{}\".format(iris_dataset['feature_names']))"
    ]
   },
@@ -134,6 +275,9 @@
     }
    ],
    "source": [
+    "# The data itself is contained in the \"target\" and \"data fields\".\n",
+    "# Data contains the numeric measurements in a Numpy array:\n",
+    "\n",
     "print(\"Type of data: {}\".format(type(iris_dataset['data'])))"
    ]
   },
@@ -151,7 +295,18 @@
     }
    ],
    "source": [
+    "# The rows in the data array correspond to \"FLOWER\", while the columns represent the FOUR measurements that were taken for each flower:\n",
+    "\n",
     "print(\"Shape of data: {}\".format(iris_dataset['data'].shape))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <br><br>The individual items are called <b>Samples</b> in ML, and their properties are called <b>Features.</b>\n",
+    "\n",
+    "##### The <b>Shape</b> of the data array is the number of samples multiplied by the number of features. <br><br>\n"
    ]
   },
   {
@@ -239,7 +394,8 @@
    "metadata": {},
    "source": [
     "<br><br><br>\n",
-    "## <b><center>Measuring Success: Training and Testinig Data</center></b>"
+    "\n",
+    "## <b><center>Measuring Success: Training and Testinig Data</center></b>\n"
    ]
   },
   {
@@ -248,7 +404,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(iris_dataset['data'], iris_dataset['target'], random_state = 0)"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    iris_dataset['data'], iris_dataset['target'], random_state=0)"
    ]
   },
   {
@@ -294,7 +451,8 @@
    "metadata": {},
    "source": [
     "<br><br><br>\n",
-    "## <b><center>First Things First: Look at Your Data</center></b>"
+    "\n",
+    "## <b><center>First Things First: Look at Your Data</center></b>\n"
    ]
   },
   {
@@ -342,10 +500,11 @@
    "source": [
     "# create dataframe from data in X_train\n",
     "# label the columns using strings in the iris_dataset.feature_names\n",
-    "iris_dataframe = pd.DataFrame(X_train, columns = iris_dataset.feature_names)\n",
+    "iris_dataframe = pd.DataFrame(X_train, columns=iris_dataset.feature_names)\n",
     "\n",
     "# create a scatter matrix from the dataframe, color by y_train\n",
-    "pd.plotting.scatter_matrix(iris_dataframe, c = y_train, figsize = (15, 15), marker = 'o', hist_kwds = {'bins':20}, s = 60, alpha = .8, cmap = mglearn.cm3)\n"
+    "pd.plotting.scatter_matrix(iris_dataframe, c=y_train, figsize=(\n",
+    "    15, 15), marker='o', hist_kwds={'bins': 20}, s=60, alpha=.8, cmap=mglearn.cm3)"
    ]
   },
   {
@@ -353,7 +512,8 @@
    "metadata": {},
    "source": [
     "<br><br><br>\n",
-    "## <b><center>Building Your First Model: k-Nearest Neighbors</center></b>"
+    "\n",
+    "## <b><center>Building Your First Model: k-Nearest Neighbors</center></b>\n"
    ]
   },
   {
@@ -408,7 +568,8 @@
     }
    ],
    "source": [
-    "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski', metric_params=None, n_jobs=1, n_neighbors=1, p=2, weights='uniform')"
+    "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+    "                     metric_params=None, n_jobs=1, n_neighbors=1, p=2, weights='uniform')"
    ]
   },
   {
@@ -416,12 +577,13 @@
    "metadata": {},
    "source": [
     "<br><br><br>\n",
-    "## <b><center>Making Predictions</center></b>"
+    "\n",
+    "## <b><center>Making Predictions</center></b>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -433,13 +595,13 @@
     }
    ],
    "source": [
-    "X_new = np.array([[5, 2.9, 1, 0.2]])\n",
+    "X_new = np.array([[6, 3.9, 2, 0.3]])\n",
     "print(\"X_new.shape: {}\".format(X_new.shape))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +616,8 @@
    "source": [
     "prediction = knn.predict(X_new)\n",
     "print(\"Prediction: {}\".format(prediction))\n",
-    "print(\"Predicted target name: {}\".format(iris_dataset['target_names'][prediction]))"
+    "print(\"Predicted target name: {}\".format(\n",
+    "    iris_dataset['target_names'][prediction]))"
    ]
   },
   {
@@ -462,7 +625,8 @@
    "metadata": {},
    "source": [
     "<br><br><br>\n",
-    "## <b><center>Evaluating the Model</center></b>"
+    "\n",
+    "## <b><center>Evaluating the Model</center></b>\n"
    ]
   },
   {
@@ -525,7 +689,8 @@
    "metadata": {},
    "source": [
     "<br><br><br>\n",
-    "## <b><center>Summary and Outlook</center></b>"
+    "\n",
+    "## <b><center>Summary and Outlook</center></b>\n"
    ]
   },
   {
@@ -542,7 +707,8 @@
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(iris_dataset['data'], iris_dataset['target'], random_state = 0)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    iris_dataset['data'], iris_dataset['target'], random_state=0)\n",
     "\n",
     "knn = KNeighborsClassifier(n_neighbors=1)\n",
     "knn.fit(X_train, y_train)\n",
