--- a/CHAPTER_02_Supervised_Learning.ipynb
+++ b/CHAPTER_02_Supervised_Learning.ipynb
@@ -8,6 +8,30 @@
     "\n",
     "<br><br><br>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<mark>NOTE:</mark><br>\n",
+    "Supervised learning is used whenever we want to predict a certain outcome from a given input, and we have examples of input/output pairs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <b><u>CLASSIFIACTION AND REGRESSION:</u></b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are two major types of supervised learning problems, called <i>classification</i> and <i>regression.</i><br>\n",
+    "\n",
+    "IN classification, the goal is to predict a <i>class label</i>, which is a choice from a predefined list of possibilites."
+   ]
   }
  ],
  "metadata": {
