--- a/Models With Concepts/Chap_01_Regression.ipynb
+++ b/Models With Concepts/Chap_01_Regression.ipynb
@@ -4,8 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "># LECTURE - 01\n",
-    ">### INTRODUCTION TO LINEAR REGRESSION: <br><br>"
+    "> # LECTURE - 01\n",
+    ">\n",
+    "> ### INTRODUCTION TO LINEAR REGRESSION: STOCK PREDICTION<br><br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<pre>\n",
+    "- The Idea of the regression is to take continuous data and \n",
+    "  figure out the best fit line for that data.\n",
+    "\n",
+    "- With Linear Regression, we try to model our data with a straight line.\n",
+    "\n",
+    "- Equation of the stringht line is: y = mx + c\n",
+    "    if we have x, we can figure out y given that we have m and c\n",
+    "\n",
+    "- Basically the whole point of the regresion is to find out what m and c is.\n",
+    "</pre>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<pre>\n",
+    "- With ML, especially with Supervised ML, everything boils down to Features(are Attributes, in the below case it is continous data)\n",
+    "  and Lebels.\n",
+    "</pre>\n"
    ]
   },
   {
@@ -14,7 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import quandl, math\n",
+    "import quandl\n",
+    "import math\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn import preprocessing, model_selection, svm\n",
@@ -62,6 +91,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<li>In Machine Learning, We can have all the features we want but we need to have only some meaningful features, features that actually have to do something with our data.</li>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -89,34 +125,41 @@
     }
    ],
    "source": [
-    "df = df[ ['Adj. Open', 'Adj. High', 'Adj. Low', 'Adj. Close', 'Adj. Volume'] ]\n",
+    "df = df[['Adj. Open', 'Adj. High', 'Adj. Low', 'Adj. Close', 'Adj. Volume']]\n",
     "print(df.head)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Percentage change in High to Low stock price: \n",
-    "df['H2L_PerCng'] = ( df['Adj. High'] - df['Adj. Close'] ) / df['Adj. Close'] * 100.0\n"
+    "# Percentage change in High to Low stock price:\n",
+    "# This is almost percent votatility of the day\n",
+    "# Therefore, we are gonna to define a new column: \"H2L_PerCng\"\n",
+    "\n",
+    "\n",
+    "df['H2L_PerCng'] = (df['Adj. High'] - df['Adj. Close']) / \\\n",
+    "    df['Adj. Close'] * 100.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# (Features)\n",
-    "# Daily Percentage change in Close to Open stock price: \n",
-    "df['Per_Cng'] = ( df[\"Adj. Close\"] - df['Adj. Open'] ) / df['Adj. Open'] * 100.0\n"
+    "# Daily Percentage change or the daily move in Close to Open stock price:\n",
+    "# Normally the Percent Change is => ((New - Old) / (Old)) * 100\n",
+    "\n",
+    "df['Per_Cng'] = (df[\"Adj. Close\"] - df['Adj. Open']) / df['Adj. Open'] * 100.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -135,8 +178,9 @@
    ],
    "source": [
     "# (Features)\n",
-    "# creating the dataframe we wnat to work with:\n",
-    "df = df[ ['Adj. Close', 'H2L_PerCng', 'Per_Cng', 'Adj. Volume'] ]\n",
+    "# Defining the new dataframe, we want to work with or we do really care about:\n",
+    "\n",
+    "df = df[['Adj. Close', 'H2L_PerCng', 'Per_Cng', 'Adj. Volume']]\n",
     "\n",
     "print(df.head())"
    ]
@@ -145,37 +189,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "># LECTURE - 02\n",
-    ">### Features and Labels: \n",
-    "> Usually we define features by capital X and labels by small y.<br><br>"
+    "<br><br>\n",
+    "\n",
+    "> # LECTURE - 02\n",
+    ">\n",
+    "> ### Features and Labels:\n",
+    ">\n",
+    "> Usually we define features by capital X and labels by small y.<br><br>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            Adj. Close  H2L_PerCng   Per_Cng  Adj. Volume      label\n",
+      "forecast_out is: 31 \n",
+      "\n",
+      "\n",
+      "dataframe head is:\n",
+      "             Adj. Close  H2L_PerCng   Per_Cng  Adj. Volume      label\n",
       "Date                                                                \n",
-      "2004-08-19   50.322842    3.712563  0.324968   44659000.0  69.078238\n",
-      "2004-08-20   54.322689    0.710922  7.227007   22834300.0  67.839414\n",
-      "2004-08-23   54.869377    3.729433 -1.227880   18256100.0  68.912727\n",
-      "2004-08-24   52.597363    6.417469 -5.726357   15247300.0  70.668146\n",
-      "2004-08-25   53.164113    1.886792  1.183658    9188600.0  71.219849\n",
+      "2004-08-19   50.322842    3.712563  0.324968   44659000.0  67.739104\n",
+      "2004-08-20   54.322689    0.710922  7.227007   22834300.0  69.399229\n",
+      "2004-08-23   54.869377    3.729433 -1.227880   18256100.0  68.752232\n",
+      "2004-08-24   52.597363    6.417469 -5.726357   15247300.0  69.639972\n",
+      "2004-08-25   53.164113    1.886792  1.183658    9188600.0  69.078238\n",
       "\n",
       "\n",
-      "\n",
-      "            Adj. Close  H2L_PerCng   Per_Cng  Adj. Volume    label\n",
-      "Date                                                              \n",
-      "2018-01-30     1177.37    0.896914 -0.029718    1792602.0  1094.00\n",
-      "2018-01-31     1182.22    0.346805 -0.134312    1643877.0  1053.15\n",
-      "2018-02-01     1181.59    0.495942  0.476195    2774967.0  1026.55\n",
-      "2018-02-02     1119.20    1.081129 -0.729098    5798880.0  1054.09\n",
-      "2018-02-05     1068.76    4.325574 -2.893850    3742469.0  1006.94\n"
+      "dataframe tail is:\n",
+      "             Adj. Close  H2L_PerCng   Per_Cng  Adj. Volume   label\n",
+      "Date                                                             \n",
+      "2016-08-24      793.60    0.612399 -0.409106    1284437.0  800.71\n",
+      "2016-08-25      791.30    0.432200 -0.088384    1202680.0  814.17\n",
+      "2016-08-26      793.22    0.779103  0.092115    1248881.0  809.57\n",
+      "2016-08-29      795.82    0.339273  0.349284     773698.0  811.77\n",
+      "2016-08-30      791.92    0.767754 -0.121078    1167413.0  804.08\n"
      ]
     }
    ],
@@ -183,79 +235,193 @@
     "# It is just a variable created to work with the stock prices:\n",
     "forecast_col = 'Adj. Close'\n",
     "\n",
+    "\n",
+    "# Just in case there is not missing data\n",
     "# In case of missing data and we can't get rid of it, so we fill that column with some specific values:\n",
     "df.fillna(-9999, inplace=True)\n",
+    "# We did this because, with ML we can't work with NaN data,\n",
+    "# therefore we actually have to replace the NaN with something, or\n",
+    "# we can get rid of the entire column.\n",
+    "\n",
     "\n",
     "# Actually we are trying to predict the 10% of the dataframe to predict the forecast out:\n",
-    "forecast_out = int(math.ceil(0.01*len(df)))\n",
+    "forecast_out = int(math.ceil(0.01 * len(df)))\n",
+    "print(f'forecast_out is: {forecast_out} \\n\\n')\n",
     "\n",
     "# Creating label:\n",
     "# Since we have forecast_out, so we can create labels\n",
     "# Here we are using forecast_out as minus that's why we made it as int data type\n",
-    "# So, basically we are shifting the columns negativelly upwards\n",
+    "# So, basically we are shifting the columns negativelly upwards.\n",
     "df['label'] = df[forecast_col].shift(-forecast_out)\n",
+    "# This way, each row, the label column for each row will be adjusted close price 10 days into the future.\n",
+    "# So, that's our label.\n",
+    "\n",
     "\n",
     "# So, this will just print first five rows of the dataframes\n",
-    "print(df.head())\n",
-    "print(\"\\n\\n\")\n",
+    "print(f'dataframe head is:\\n {df.head()}\\n\\n')\n",
+    "\n",
     "df.dropna(inplace=True)\n",
-    "print(df.tail())\n"
+    "\n",
+    "print(f'dataframe tail is:\\n {df.tail()}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "># LECTURE - 03\n",
-    ">### Training and Testing: <br><br>"
+    "<br><br>\n",
+    "\n",
+    "> # LECTURE - 03\n",
+    ">\n",
+    "> ### Training and Testing: <br><br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<li>Scaling our data aspect is usually done on the features.</li>\n",
+    "<li>The goal is often to get our features to be somewhere between -1 and +1</li>\n",
+    "<li>This can actaully just help with accuracy as well as just processing speed or how long it might take to actually do the calculations.</li>\n",
+    "<br>\n",
+    "\n",
+    "<li>Here, we are gonna to use cross-validation to create our training and testing samples. It's a good way to split up our data, suffle it up.</li>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3321 3321\n"
+     ]
+    }
+   ],
    "source": [
-    "X = np.array( df.drop(['label'], axis = 1) )\n",
-    "# Creating training and testing set of data(hopefully here we are using 20% of total data)\n",
-    "# X_test and y_test we used to fit our classifier.\n",
-    "X_train, X_test, y_train, y_test = model_selection.train_test_split( X, y, test_size=0.2 )\n",
+    "# so, our features are basically everything, except for the label column.\n",
+    "# We can do this beacause df.drop() return new dataframes and\n",
+    "# it can be converted to numpy array and here it is being saved to the value of the X.\n",
+    "X = np.array(df.drop(['label'], axis=1))\n",
     "\n",
-    "X = X[:-forecast_out]\n",
     "\n",
-    "# Stuff that is actually goinig to predict again:\n",
-    "X_lately = X[-forecast_out:]\n",
+    "# Creating the labels:\n",
+    "# Now the value of y is our labels :\n",
+    "y = np.array(df['label'])\n",
+    "\n",
+    "\n",
+    "# Now, we are going to scale X\n",
+    "\n",
     "\n",
     "X = preprocessing.scale(X)\n",
     "\n",
-    "# Dropping the missing data:\n",
-    "df.dropna(inplace=True)\n",
     "\n",
-    "# Creating the labels:\n",
-    "y = np.array(df['label'])\n",
-    "y = np.array(df['label'])\n",
+    "# redefining X, this includes all the point because we have shifted\n",
+    "# So, we are actually making sure that we only have X's where we have values for 'y'\n",
+    "# X = X[:-forecast_out + 1]\n",
+    "# We actually don't need to do it again, as we have already droped it above.\n",
+    "\n",
+    "\n",
+    "print(len(X), len(y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Regression Model Accuracy is: 0.9775392066724172\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Since, we got our X's and 'y'\n",
+    "# therefore we are now ready for creating our training and testing sets.\n",
+    "# Creating training and testing set of data(hopefully here we are using 20% of total data)\n",
+    "# X_test and y_test we used to fit our classifier.\n",
+    "X_train, X_test, y_train, y_test = model_selection.train_test_split(\n",
+    "    X, y, test_size=0.2)\n",
+    "# We use, X_train and y_train, to fit our classifiers.\n",
+    "\n",
+    "# Stuff that is actually goinig to predict again:\n",
+    "X_lately = X[-forecast_out:]\n",
     "\n",
     "\n",
     "# Now we need to define the classifier\n",
     "clf = LinearRegression()\n",
     "\n",
+    "\n",
     "# Now to fit or train our classifier, we just fit our classifier\n",
-    "# fit is synonymous with train \n",
-    "clf.fit( X_train, y_train )\n",
+    "# fit is synonymous with train\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
     "\n",
     "# Now we need to see out what the accuracy is\n",
     "# score is synonymous with test\n",
-    "accuracy = clf.score( X_test, y_test )\n",
+    "accuracy = clf.score(X_test, y_test)\n",
     "\n",
-    "print(accuracy)\n"
+    "\n",
+    "print(f'Linear Regression Model Accuracy is: {accuracy}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM Model Accuracy is: 0.8055514658688122\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Switching The Algorithm From Linear Regression to SVM\n",
+    "# Let's now we try to use a different algorithm: SVM, just for testing\n",
+    "# Default value of kernel in the SVR() is 'linear', we can also use 'poly' as well:\n",
+    "# clf = svm.SVR(kernel = 'poly')\n",
+    "\n",
+    "clf = svm.SVR()\n",
+    "\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "accuracy = clf.score(X_test, y_test)\n",
+    "\n",
+    "print(f'SVM Model Accuracy is: {accuracy}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "># LECTURE - 04\n",
-    ">### Forecasting and Predicting: <br><br>"
+    "<br><br>\n",
+    "\n",
+    "> # LECTURE - 04\n",
+    ">\n",
+    "> ### Forecasting and Predicting: <br><br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The parameter 'n_jobs' means that how many jobs or how many threads we are willing to run at any given time.\n",
+    "\n",
+    "And the default for regression is 1.\n",
+    "\n",
+    "'clf = LinearRegression()' => this is running in linealy. <br>\n",
+    "'clf = LinearRegression(n_jobs = 10)' => this will run atleast 10 jobs at a time, parallelly. <br>\n",
+    "\n",
+    "'clf = LinearRegression(n_jobs = -1)' => this will run as many jobs as possible by our processor.\n"
    ]
   }
  ],
@@ -275,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   },
   "orig_nbformat": 4
  },
